exports[`data-loader ignores completion if unmounted first 1`] = `
Object {
  "dataLoader": Object {
    "data": Object {},
    "loadingCount": 1,
  },
}
`;

exports[`data-loader supports multiple loaders using the same key when data already loaded 1`] = `
Object {
  "data": Object {
    "result": "Test",
  },
  "isCompleted": true,
  "isLoading": false,
  "loadFailed": false,
  "renderCount": 3,
}
`;

exports[`data-loader supports multiple loaders using the same key when data already loaded 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "attachedComponents": 1,
          "completed": true,
          "data": Object {
            "result": "Test",
          },
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": false,
        },
      },
    },
    "loadingCount": 0,
  },
}
`;

exports[`data-loader supports multiple loaders using the same key when data loading 1`] = `
Object {
  "isCompleted": false,
  "isLoading": true,
  "loadFailed": false,
  "renderCount": 3,
}
`;

exports[`data-loader supports multiple loaders using the same key when data loading 2`] = `
Object {
  "dataLoader": Object {
    "data": Object {
      "testDataType": Object {
        "testKey": Object {
          "attachedComponents": 1,
          "completed": false,
          "dataFromServerSideRender": false,
          "failed": false,
          "loading": true,
        },
      },
    },
    "loadingCount": 2,
  },
}
`;
